--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css"
-          integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
 
     <title>Resume</title>
 </head>
@@ -39,21 +38,24 @@
     <!--Work Experience-->
     <h1 style="font-weight: bold">Work Experience</h1>
     <hr style="height:1px; color:#000000;background-color:#000000;"/>
-    <h4 style="font-weight: bold">Cohomology Labs</h4>
-    <p>1. Working as a full stack developer to build a complete web application for the company to manage the new cryptocurrency
-    the company re</p>
+    <div class="row">
+        <div class="col-sm-6">
+            <h4 style="font-weight: bold">Cohomology Labs</h4>
+        </div>
+        <div class="col-sm-6">
+            (March-2018 till Date)
+        </div>
+    </div>
+    <p>1. Working as a full stack developer to build a complete web application for the company to manage the new
+        cryptocurrency
+        the company has released recently</p>
+    <p>2. Built both the frontend as well as the backend</p>
 
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js"
-        integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
-        crossorigin="anonymous"></script>
+<script src="js/jquery-3.3.1.slim.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
