--- a/index.html
+++ b/index.html
@@ -43,13 +43,41 @@
             <h4 style="font-weight: bold">Cohomology Labs</h4>
         </div>
         <div class="col-sm-6">
-            (March-2018 till Date)
+            (May-2018 till Date)
         </div>
     </div>
     <p>1. Working as a full stack developer to build a complete web application for the company to manage the new
         cryptocurrency
         the company has released recently</p>
-    <p>2. Built both the frontend as well as the backend</p>
+    <p>2. Built both the frontend as well as the backend, rest-api, secure and robust authentication, forms with several
+        validations and features such as Etherium wallet addresss validation, transaction hash etc</p>
+    <p>3. Integrated top notch premium theme elements to develop an eye catching UI experience</p>
+    <p>4. Communicated with senior developers and clients to explain the insights and share the work progress</p>
+    <p>5. Integrated Django, Angular, React, Jquery, Javascript, Solidity, MySQL and lot more technology stack to
+        implement all the features that were demanded </p>
+    <p>6. On Time and satisfactory delivery of the assigned tasks.</p>
+    <hr style="height:1px; color:#000000;background-color:#000000;"/>
+    <div class="row">
+        <div class="col-sm-6">
+            <h4 style="font-weight: bold">Kure HealthCare</h4>
+        </div>
+        <div class="col-sm-6">
+            (January-2018 to April-2018 )
+        </div>
+    </div>
+    <p>1. Worked as a Django developer to build a full stack web application for the hospitals to manage their patient
+        records most efficiently in the form of history sheets</p>
+    <p>2. Built both the frontend and backend, main dashboard, data analysis tools, etc</p>
+
+    <p>3. Implemented many features as per the demand of the application such as update patient record, saving as
+        drafts, generating pdf of the entire repost, view patient record, designed the form using premium thmeme
+        elements as well as added custom animations and styling to increase user interactivity</p>
+    <p>4. Integreated MonogDB(no sql database) as well as elasticsearcg with django as the data was huge</p>
+    <p>5. Also implemented Javascript, Jquery, bootstrap, etc to build a full repsponsive user interface</p>
+
+    <!--Personal Projects-->
+    <h1 style="font-weight: bold">Personal Projects</h1>
+    <hr style="height:1px; color:#000000;background-color:#000000;"/>
 
 </div>
 <!-- Optional JavaScript -->
