--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <br>
     <!-- About Me Section -->
-    <h1 style="font-weight: bold;">About Me</h1>
+    <h2 style="font-weight: bold;">About Me</h2>
     <hr style="height:1px; color:#000000;background-color:#000000;"/>
     <h4 style="font-weight: bold;">Technical Skills: C/C++, Python, Django, Angular, React, HTML, CSS, Javascript,
         Linux</h4>
@@ -36,7 +36,7 @@
     <h4 style="font-weight: bold;">Interests: Oratory, Gaming, Casusal Photography</h4>
     <br><br>
     <!--Work Experience-->
-    <h1 style="font-weight: bold">Work Experience</h1>
+    <h2 style="font-weight: bold">Work Experience</h2>
     <hr style="height:1px; color:#000000;background-color:#000000;"/>
     <div class="row">
         <div class="col-sm-6">
@@ -76,8 +76,23 @@
     <p>5. Also implemented Javascript, Jquery, bootstrap, etc to build a full repsponsive user interface</p>
 
     <!--Personal Projects-->
-    <h1 style="font-weight: bold">Personal Projects</h1>
+    <h2 style="font-weight: bold">Personal Projects</h2>
     <hr style="height:1px; color:#000000;background-color:#000000;"/>
+    <div class="row">
+<div class="col-sm-6">
+    <!-- First Personal Project -->
+<h4 style="font-weight:bold">StarSocial</h4>
+</div>
+<div class="col-sm-6">
+<a href="https://github.com/aditya2222/django-startsocial">Project Link</a>
+</div>
+    </div>
+    <p>1. StarSocial is a full stack social networking web application built on top of Python Django</p>
+    <p>2. Authenticated Users can visit the web application and can create or join groups</p>
+    <p>3. Users can write posts and can follow other users and view their posts</p>
+    <p>4. The frontend is built using JINJA  and Javascript, HTML, CSS and Jquery and fully connected with the backend which handles all the events</p>
+<!-- Second Personal Project -->
+
 
 </div>
 <!-- Optional JavaScript -->
