--- a/index.html
+++ b/index.html
@@ -90,8 +90,61 @@
     <p>1. StarSocial is a full stack social networking web application built on top of Python Django</p>
     <p>2. Authenticated Users can visit the web application and can create or join groups</p>
     <p>3. Users can write posts and can follow other users and view their posts</p>
-    <p>4. The frontend is built using JINJA  and Javascript, HTML, CSS and Jquery and fully connected with the backend which handles all the events</p>
+    <p>4. The frontend is built using JINJA  and Javascript, HTML, CSS, Jquery, Bootstrap etc and fully connected with the backend which handles all the events</p>
 <!-- Second Personal Project -->
+<div class="row">
+<div class="col-sm-6">
+        <h4 style="font-weight: bold">Djcommerce</h4>
+</div>
+<div class="col-sm-6">
+        <a href="https://github.com/aditya2222/django-ecommerce">Project Link</a>
+</div>
+</div>
+<p>1. Djcommerce, as the name suggests is a full stack ecommerce platform built using Python Django.</p>
+<p>2. Djcommerce has all the features we may find in a modern ecommerce platform and is also highly scalable</p>
+<p>3. Djcommerce's frontend is built using JINJA,Javascript, HTML, CSS, Jquery, Bootstrap etc and I have made sure to keep the design simple and graceful across all devices</p>
+<p>4. From robust authentication to payment gateyway Integration, djcommerce has it all! Like all modern day ecommerce platforms we can sign in and maintain our account using an email and password</p>
+<p>5. It has fully functional cart functionality Integrated which enables the user to save the items and checkout at any point of time.</p>
+<p>6. The superuser dashboard at the backend keeps a record of all the users, cart items, pruchases, etc</p>
+
+<div class="row">
+<div class="col-sm-6">
+        <h4 style="font-weight: bold">Bloqus</h4>
+</div>
+<div class="col-sm-6">
+        <a href="https://github.com/aditya2222/django-blog-application">Project Link</a>
+</div>
+</div>
+<p>1. It is a full stack blogging web application creates using Python Django and primarily used as a discussion forum on a particular topic or for general bloggin</p>
+<p>2. This application is enriched with various features such as saving posts as drafts and publish later, comment approval system, like or dislike posts, add new posts, etc</p>
+<p>3. A seperate admin panel created for the one superuser who has complete authority over the application  and can delete or add users with specific permissions, delete posts, add new onses, etc</p>
+<p>4. Used javascript for developing the UI and wrapped all elements inside bootstrap  to make it repsponsive</p>
+
+<!-- My Portflio -->
+<div class="row">
+
+<div class="col-sm-6">
+        <h4 style="font-weight: bold">My Portflio</h4>
+</div>
+<div class="col-sm-6">
+<a href="https://portfolio-web-app.herokuapp.com/">Link to Portflio</a>
+</div>
+
+</div>
+
+<h2 style="font-weight: bold">Competitions</h2>
+<hr style="height:1px; color:#000000;background-color:#000000;"/>
+<div class="row">
+<div class="col-sm-6">
+        <h4 style="font-weight:bold">National Hackathon (at Chandigarh University)</h4>
+</div>
+<div class="col-sm-6">
+(March-2018)
+</div>
+<p>1. Developed a web application</p>
+</div>
+
+
 
 
 </div>
