content updates commit

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <hr style="height:1px; color:#000000;background-color:#000000;"/>
     <h4 style="font-weight: bold;">Technical Skills: C/C++, Python, Django, Angular, React, HTML, CSS, Javascript,
         Linux</h4>
-    <h4 style="font-weight: bold">Fluent In English and Hindi; Conversational Proficiency in English</h4>
+    <h4 style="font-weight: bold">Languages: Fluent In English and Hindi; Conversational Proficiency in English</h4>
     <h4 style="font-weight: bold;">Interests: Oratory, Gaming, Casusal Photography</h4>
     <br><br>
     <!--Work Experience-->
@@ -70,10 +70,10 @@
     <p>2. Built both the frontend and backend, main dashboard, data analysis tools, etc</p>
 
     <p>3. Implemented many features as per the demand of the application such as update patient record, saving as
-        drafts, generating pdf of the entire repost, view patient record, designed the form using premium thmeme
+        drafts, generating pdf of the entire report, view patient record, designed the form using premium theme
         elements as well as added custom animations and styling to increase user interactivity</p>
-    <p>4. Integreated MonogDB(no sql database) as well as elasticsearcg with django as the data was huge</p>
-    <p>5. Also implemented Javascript, Jquery, bootstrap, etc to build a full repsponsive user interface</p>
+    <p>4. Integrated MonogDB(no sql database) as well as elasticsearch with django as the data was huge</p>
+    <p>5. Also implemented Javascript, Jquery, bootstrap, etc to build a fully repsponsive user interface</p>
 
     <!--Personal Projects-->
     <h2 style="font-weight: bold">Personal Projects</h2>
