--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h4 style="font-weight: bold">Cohomology Labs</h4>
         </div>
         <div class="col-sm-6">
-            (May-2018 till Date)
+            (May 2018 till Date)
         </div>
     </div>
     <p>1. Working as a full stack developer to build a complete web application for the company to manage the new
@@ -62,7 +62,7 @@
             <h4 style="font-weight: bold">Kure HealthCare</h4>
         </div>
         <div class="col-sm-6">
-            (January-2018 to April-2018 )
+            (January 2018 to April 2018 )
         </div>
     </div>
     <p>1. Worked as a Django developer to build a full stack web application for the hospitals to manage their patient
@@ -75,6 +75,36 @@
     <p>4. Integrated MonogDB(no sql database) as well as elasticsearch with django as the data was huge</p>
     <p>5. Also implemented Javascript, Jquery, bootstrap, etc to build a fully repsponsive user interface</p>
 
+    <div class="row">
+        <div class="col-sm-6">
+                <h4 style="font-weight:bold">TameTraffic</h4>
+            </div>
+        <div class="col-sm-6">
+                (May 2017 to December 2017)
+        </div>
+    </div>
+    <p>1. Worked as a frontend developer to build the designs crafted by the experienced designers into frontend websites</p>
+    <p>2. Closely interacted with the backend team to build appropriate designs that were scalable and easily integrated with the backend</p>
+    <p>3. Technology stack required to build the frontend included Javascript and Javascript Framework Angular, CSS, Jquery, Bootstrap and also some Firebase integration to implement realtime notifications</p>
+    <div class="row">
+        <div class="col-sm-6">
+            <h4 style="font-weight:bold">Adewap Gliders</h4>
+        </div>
+        <div class="col-sm-6">
+                    (August 2016 to March 2017)
+        </div>
+        <p>1. Worked as a full stack developer to design the e-commerce platform as my client was selling pets and corresponding accessores at that point of time</p>
+        <p>2. Built the inital ecommerce platform on wordpress then later migrated it to django backend due to some core reasons.</p>
+        <p>3. Built the entire functionality ranging from robust authentication system,cart functionality, checkout and payment gateway integration using stripe</p>
+    </div>
+    <div class="row">
+            <div class="col-sm-6">
+                    IriskOnline
+            </div>
+            <div class="col-sm-6">
+                    ()
+            </div>
+    </div>
     <!--Personal Projects-->
     <h2 style="font-weight: bold">Personal Projects</h2>
     <hr style="height:1px; color:#000000;background-color:#000000;"/>
