--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             websites</p>
         <p>2. Closely interacted with the backend team to build appropriate designs that were scalable and easily
             integrated with the backend</p>
-        <p>3. Technology stack required to build the frontend included Javascript and Javascript Framework Angular,
+        <p>3. Technology stack required to build the frontend included Vanilla Javascript and Javascript Framework React JS,
             CSS, Jquery, Bootstrap and also some Firebase integration to implement realtime notifications</p>
         <hr style="height:1px; color:#000000;background-color:#000000;" />
         <div class="row">
@@ -160,7 +160,7 @@
         <hr style="height:1px; color:#000000;background-color:#000000;" />
         <div class="row">
             <div class="col-sm-6">
-                <h4 style="font-weight:bold">Santiago Quintanilla</h4>
+                <h4 style="font-weight:bold">Santiago Quintanilla (Independent Freelancer)</h4>
             </div>
             <div class="col-sm-6">
                 (April 2014 to October 2014)
