--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- About Me Section -->
         <h2 style="font-weight: bold;">About Me</h2>
         <hr style="height:1px; color:#000000;background-color:#000000;" />
-        <h4 style="font-weight: bold;">Technical Skills: C/C++, Python, Django, Angular, React, HTML, CSS, Javascript,
+        <h4 style="font-weight: bold;">Technical Skills: C/C++, Python, Django, React JS, Node JS, Graph QL, Angular, HTML, CSS, Javascript,
             Linux</h4>
         <h4 style="font-weight: bold">Languages: Fluent In English and Hindi; Conversational Proficiency in English</h4>
         <h4 style="font-weight: bold;">Interests: Oratory, Gaming, Casusal Photography</h4>
@@ -91,7 +91,8 @@
             websites</p>
         <p>2. Closely interacted with the backend team to build appropriate designs that were scalable and easily
             integrated with the backend</p>
-        <p>3. Technology stack required to build the frontend included Vanilla Javascript and Javascript Framework React JS,
+        <p>3. Technology stack required to build the frontend included Vanilla Javascript and Javascript Framework
+            React JS,
             CSS, Jquery, Bootstrap and also some Firebase integration to implement realtime notifications</p>
         <hr style="height:1px; color:#000000;background-color:#000000;" />
         <div class="row">
@@ -222,10 +223,10 @@
         <p>3. The application works on top of a variety of features such as users authenticate themselves, after that
             users can add the ingredients and finally there is checkout functionality. All the user activity is stored
             in backend and the checkout page is further connected to a payment gateway</p>
-        <p>4. The applicaion is completely built using React JS and varius 3rd party libraries to serve different
-            purposes such as making GET or POST calls to the server, checking out, Authentication etc and also the
-            stylesheets are written in such a manner so as to ensure the responsiveness of the application across
-            mobile devices also</p>
+        <p>4. The application features a variety of next-gen javascript as well as integration with popular libraries such as 
+            redux, asynchronous code execution, real time state transfer, server GET and POST calls, JWT authentication, checkout functionality, payment gateway integration etc
+        </p>
+            <p style="text-decoration:underline"></p>
 
         <!-- Second Personal Project -->
         <div class="row">
@@ -236,7 +237,7 @@
                 <a href="https://github.com/aditya2222/django-ecommerce">Project Link</a>
             </div>
         </div>
-        <p>1. Djcommerce, as the name suggests is a full stack ecommerce platform built using Python Django.</p>
+        <p>1. Djcommerce, as the name suggests is a full stack ecommerce platform built on top of Python Django.</p>
         <p>2. Djcommerce has all the features we may find in a modern ecommerce platform and is also highly scalable</p>
         <p>3. Djcommerce's frontend is built using JINJA,Javascript, HTML, CSS, Jquery, Bootstrap etc and I have made
             sure
@@ -338,6 +339,30 @@
         <p>- Bachelor Of Technology Engineering (Computer Science Major) </p>
         <p>- Average SGPA: 8.6</p>
         <p>- Average Attendance: 95%</p>
+        <hr style="height:1px; color:#000000;background-color:#000000;" />
+        <div class="row">
+            <div class="col-sm-6">
+                <h4 style="font-weight: bold;">Class XII</h4>
+            </div>
+            <div class="col-sm-6">
+                (2016)
+            </div>
+        </div>
+        <p>- Stream: Non Medical</p>
+        <p>- Percentage: 83%</p>
+        <hr style="height:1px; color:#000000;background-color:#000000;" />
+
+        <div class="row">
+            <div class="col-sm-6">
+                <h4 style="font-weight: bold;">Class X</h4>
+            </div>
+            <div class="col-sm-6">
+                (2014)
+            </div>
+        </div>
+        <p>- Stream: Non Medical</p>
+        <p>- Percentage: 80.5%</p>
+        <hr style="height:1px; color:#000000;background-color:#000000;" />
 
 
     </div>
